--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "react-scripts": "3.4.1",
     "react-sticky-header": "^0.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "serve": "^13.0.2"
   },
-  "scripts": {
-    "start": "react-scripts start",
+  "scripts": {    
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
